[package]
name = "rcu_com"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
futures = "0.3.31"
r2r = "0.9"
eframe = "0.29.1"
env_logger = "0.11.5"
egui_plot = "0.29.0"
egui-modal = "0.5.0"
rfd = "0.15.0"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }

[dependencies.nalgebra-lapack]
version = "0.25.0"
default-features = false
features = ["openblas"]
