[package]
name = "imu_cal_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra-lapack = { version = "0.25.0", default-features = false, features = [
    "openblas",
] }
tokio = { version = "1.40.0", features = ["full"] }
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
futures = "0.3.31"
r2r = { version = "0.9", optional = true }
eframe = "0.29.1"
env_logger = "0.11.5"
egui_plot = "0.29.0"
egui-modal = "0.5.0"
rfd = "0.15.0"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.12", features = ["codec"] }
bytes = "1.7.2"
stream-cancel = "0.8.2"
scanf = "1.2.1"

# [target.'cfg(windows)'.dependencies.openblas-src]
# version = "*"
# features = ["cblas", "lapacke", "system"]

[features]
ros = ["dep:r2r"]
default = ["ros"]

# [profile.release]
# strip = true
# lto = true
